Added docker support

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ todo-frontend/npm-debug.log*
 todo-frontend/yarn-debug.log*
 todo-frontend/yarn-error.log*
 todo-frontend/.vscode
-
+data
 
 todo-api/node_modules
 todo-api/.pnp
