--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,14 @@ services:
     ports:
       - "5000:5000"
     links:
-      - mongo:mb
+      - mongo
   mongo:
     container_name: mongo
     image: mongo
     volumes:
       - ./data:/data/db
     ports:
-      - "27017:27017"
+      - "7000:27017"
   fe:
     container_name: app
     restart: always
