--- a/todo-api/package.json
+++ b/todo-api/package.json
@@ -1,9 +1,10 @@
 {
   "name": "todo-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
+  "description": "API Server for Todo App",
+  "repository": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "keywords": [],
@@ -15,10 +16,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.9"
+    "mongoose": "^5.11.9",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "morgan": "^1.10.0"
-  },
-  "description": ""
+  }
 }
