--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,12 @@ todo-frontend/npm-debug.log*
 todo-frontend/yarn-debug.log*
 todo-frontend/yarn-error.log*
 todo-frontend/.vscode
+todo-frontend/.eslintcache
 data
 
 todo-api/node_modules
 todo-api/.pnp
 todo-api/.pnp.js
+todo-api/.vscode
+
+.vscode
